<resources>
    <string name="app_name">Drinks App</string>
    <!-- Home -->
    <string name="home">Home</string>
    <string name="toolbar_title">Drinks</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="exit">Exit</string>
    <string name="the_cocktail_of_the_day">The cocktail of the day</string>
    <string name="img_random_cocktail">Image random cocktail</string>
    <string name="categories_title">Categories</string>
    <string name="title_cocktails_by_categories">"Categories: "</string>
    <string name="title_cocktails_by_glass">"Glass: "</string>
    <string name="connection_restored">Connection has been restored</string>
    <string name="no_connection">No internet connection</string>
    <string name="rule_out">Rule Out</string>

    <string name="error_detail">An error occurred while obtaining the information</string>
    <!-- All cocktails -->
    <string name="item_all_cocktails">Item all cocktails</string>
    <string name="all_cocktails">All Cocktails</string>
    <!-- Search -->
    <string name="search_no_results">No cocktails found</string>
    <string name="search">Search</string>
    <!-- Favorite -->
    <string name="favorites">Favorites</string>
    <string name="removed_cocktail">Removed from favorite</string>
    <string name="added_cocktail">Added to favorite</string>
    <!-- Detail -->
    <string name="detail">Detail</string>
    <string name="share_error">Failed to share</string>
    <string name="fab_share">Fab_share</string>
    <string name="fab_delete_or_save">Fab delete or save</string>
    <string name="img_detail_cocktail">Image detail cocktail</string>
    <string name="cocktails_description">Cocktails description</string>
    <!-- Ingredients -->
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_description">"Description: "</string>
    <string name="ingredient_no_description">No data</string>
    <!-- Categories -->
    <string name="cocktails_by_category_title">Cocktails by category title</string>
    <string name="count_of_cocktails_by_category">Count of cocktails by category\"</string>
    <string name="categories">Categories</string>
    <!-- Name of categories -->
    <string name="name_categories">Name Categories</string>
    <string name="cocktails">Cocktails</string>
    <!-- Splash -->
    <string name="logo_splash">Logo Splash</string>
    <string name="choose_option">Choose an option</string>


</resources>