<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_logout"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>