<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_title_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/common_margin_min"
                android:text="@string/the_cocktail_of_the_day"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/common_size_normal"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_home_random"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/common_margin_max"
                android:layout_marginTop="@dimen/common_margin_min"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/common_corner_default"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title_random"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/img_random_cocktail"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:background="?attr/colorPrimaryVariant"
                    android:contentDescription="@string/img_random_cocktail"
                    android:scaleType="centerCrop" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/txt_title_cocktails_by_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_margin_default"
                android:layout_marginTop="@dimen/common_margin_middle"
                android:background="@drawable/rounded_corners"
                android:paddingHorizontal="@dimen/common_padding_24"
                android:paddingVertical="@dimen/common_padding_12"
                android:text="@string/cocktails"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/common_size_default"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/guideline_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mcv_home_random"
                tools:text="aaaaaaa"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cocktails_by_categories"
                android:layout_width="0dp"
                android:layout_height="760dp"
                android:layout_marginHorizontal="@dimen/common_margin_item"
                android:layout_marginVertical="@dimen/common_margin_min"
                android:orientation="vertical"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toStartOf="@id/guideline_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title_cocktails_by_categories"
                tools:itemCount="2"
                tools:listitem="@layout/item_cocktails_by_categories_in_home"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/txt_title_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_margin_default"
                android:layout_marginTop="@dimen/common_margin_middle"
                android:background="@drawable/rounded_corners"
                android:paddingHorizontal="@dimen/common_padding_40"
                android:paddingVertical="@dimen/common_padding_12"
                android:text="@string/categories_title"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/common_size_default"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/mcv_home_random"
                tools:text="aaaaaaa"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_margin_min"
                android:layout_marginVertical="@dimen/common_margin_min"
                android:orientation="vertical"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/txt_title_categories"
                tools:itemCount="3"
                tools:listitem="@layout/item_categories_in_home"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>